# page-index-rag

./: .gitignore  CHANGELOG.md  CITATION.cff  CLI_CHEATSHEET.md  CONTRIBUTING.md  PR-SEC-HTML-to-Markdown.md  QA_TEST_PLAN.md  QA_Test_Findings.md  README.md  config.example.json  pyproject.toml
data/indexes/: CAT_10-K_20220216_6f037121.json  CAT_10-K_20230215_f79c418b.json  CAT_10-K_20240216_d03268e6.json  CAT_10-K_20250214_d22c4a73.json  CAT_144_20260202_84b96d8b.json  CAT_144_20260204_65bcf8ef.json  CAT_144_20260206_8f8bf30b.json  CAT_3_20260206_000110465926011484_bed34887.json  CAT_4_20260105_000110465926000797_e15c2d28.json  CAT_4_20260113_000110465926003275_1b0df117.json  CAT_4_20260113_000110465926003277_3bd525cf.json  CAT_4_20260113_000110465926003280_0574bf82.json  CAT_4_20260203_000110465926009704_1349bc68.json  CAT_4_20260203_000110465926009707_3777d779.json  CAT_4_20260204_000110465926010372_c4c7dc5d.json  CAT_4_20260205_000110465926010849_9a7e9142.json  CAT_4_20260206_000110465926011396_e3859bd4.json  CAT_4_20260209_000110465926011941_723c4c87.json  CAT_4_20260209_000110465926011945_a2b1ae87.json  CAT_8-K_20260106_5f103bb1.json  CAT_8-K_20260129_4830ba22.json
data/processed/: CAT_144_20260202.html  CAT_144_20260204_.html  CAT_144_20260206.html  CAT_3_20260206_000110465926011484.html  CAT_4_20260105.html  CAT_4_20260113.html  CAT_4_20260113_000110465926003277.html  CAT_4_20260113_000110465926003280.html  CAT_4_20260203_000110465926009704.html  CAT_4_20260203_000110465926009707.html  CAT_4_20260204_000110465926010372.html  CAT_4_20260205.html  CAT_4_20260206_000110465926011396.html  CAT_4_20260209_000110465926011941.html  CAT_4_20260209_000110465926011945.html
docs/: README.md  architecture.md  roadmap.md
scripts/: ab_test_mistral_vs_gemini.py
src/: cli.py  fetch_sec.py  indexer.py  ingest.py  llm.py  manage_docs.py  server.py  tree_search.py  tree_store.py
src/pageindex/: __init__.py  config.yaml  page_index.py  page_index_md.py  utils.py
src/parsers/: __init__.py  csv_parser.py  html_parser.py  html_to_markdown.py  pdf_parser.py  text_parser.py
tests/: test_html_to_markdown.py
