[project]
name = "pageindex-rag"
version = "0.1.0"
description = "Tree-based, vectorless document RAG with MCP server"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "tiktoken",
    "pymupdf",
    "PyPDF2",
    "pyyaml",
    "python-dotenv",
    "mcp[cli]",
    "rich",
    "pypdf",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "openpyxl",
]

[project.scripts]
rag-server = "src.server:main"
ingest = "src.ingest:main"
manage-docs = "src.manage_docs:main"
pageindex-rag = "src.cli:main"
fetch-sec = "src.fetch_sec:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
