[project]
name = "pageindex-rag"
version = "0.1.0"
description = "PageIndex engine for vectorless structural indexing and reasoning-based retrieval"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pageindex", "rag", "sec-filings", "structural-indexing", "vectorless-rag", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openai",
    "tiktoken",
    "pymupdf",
    "PyPDF2",
    "pyyaml",
    "python-dotenv",
    "mcp[cli]",
    "rich",
    "pypdf",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "openpyxl",
]

[project.scripts]
rag-server = "src.server:main"
ingest = "src.ingest:main"
manage-docs = "src.manage_docs:main"
pageindex-rag = "src.cli:main"
fetch-sec = "src.fetch_sec:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/jingerzz/page-index-rag"
Repository = "https://github.com/jingerzz/page-index-rag"
Issues = "https://github.com/jingerzz/page-index-rag/issues"
